It now generates an executable stand-alone pcviz.jar with tomcat7 built-in. Plus - some app. context/config. polishing.