@@ -32,10 +32,45 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.tomcat.maven</groupId>-->
+				<!--<artifactId>tomcat7-maven-plugin</artifactId>-->
+				<!--<version>2.1</version>-->
+				<!--<configuration>-->
+					<!--<url>http://localhost:8080/manager</url>-->
+					<!--<server>localhost</server>-->
+					<!--<systemProperties>-->
+						<!--<JAVA_OPTS>-Xms256m -Xmx8g -XX:MaxPermSize=256m</JAVA_OPTS>-->
+					<!--</systemProperties>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 			<plugin>
+				<!-- Can run the exec-jar as: java -Xms256m -Xmx3g -DCPATH2_HOME=$CPATH2_HOME
+					-Djava.io.tmpdir=$CPATH2_HOME/tmp -jar target/cpath-web-service-<VERSION>-exec-war.jar -->
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.1</version>
+				<!-- this is for making an executable jar with the tomcat built-in -->
+				<executions>
+					<execution>
+						<id>create-exec-war</id>
+						<goals>
+							<goal>exec-war-only</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<path>/</path>
+							<enableNaming>false</enableNaming>
+							<attachArtifactClassifier>exec-war</attachArtifactClassifier>
+							<attachArtifactClassifierType>jar</attachArtifactClassifierType>
+							<!-- An HTTP access log pattern ('combined', modified just to get actual client IP)
+							to match the Logstash 2.1x built-in %{COMBINEDAPACHELOG} Grok pattern -->
+							<accessLogValveFormat>%{X-Forwarded-For}i %l %u %t "%r" %s %b "%{Referer}i" "%{User-Agent}i"</accessLogValveFormat>
+							<finalName>pcviz.jar</finalName>
+						</configuration>
+					</execution>
+				</executions>
+				<!-- this is for tomcat:run -->
 				<configuration>
 					<url>http://localhost:8080/manager</url>
 					<server>localhost</server>
@@ -43,6 +78,14 @@
 						<JAVA_OPTS>-Xms256m -Xmx8g -XX:MaxPermSize=256m</JAVA_OPTS>
 					</systemProperties>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.tomcat</groupId>
+						<artifactId>tomcat-catalina</artifactId>
+						<version>8.0.24</version>
+						<scope>runtime</scope>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
@@ -120,6 +163,12 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
@@ -160,7 +209,6 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
-			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
